worldserver implement the world protocol codec